--- a/css/ui-kit.css
+++ b/css/ui-kit.css
@@ -1,12 +1,19 @@
 :root {
-    --primary-c:#FFFFFF;
-    --secondary-c:#191919;
-    --tertiary-c:#000000;
-    --accent-c:#118DA8;
+    --primary-c:#212529;
+    --secondary-c:#FFFFFF;
+    --accent-c:#DDD7C0;
+    --form-error-c:#E13A3A;
+    --form-primary-c: #F9C67B;
 }
 
 body {
     background-color: var(--secondary-c);
+}
+
+.container {
+    max-width:1340px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 * {
@@ -18,31 +25,53 @@ body {
     scroll-behavior: smooth;
 }
 
-
 h1 {
    font-weight: 400;
-   font-size: 70px;
-   line-height: 80px;
-   letter-spacing: 3.2px;
+   font-size: 72px;
+   line-height: 120%;
+   letter-spacing: 0px;
 }
 
 h2 {
     font-weight: 400;
-    font-size: 64px;
-    line-height: 79px;
-    letter-spacing: 2.88px;
+    font-size: 48px;
+    line-height:normal;
+    letter-spacing: 0px;
 }
 
-h6 {
+h3 {
     font-weight: 400;
-    font-size: 22px;
-    line-height: 33px;
+    font-size: 36px;
+    line-height: normal;
+    letter-spacing: 0px;
+}
+
+h4 {
+    font-weight: 400;
+    font-size: 18px;
+    line-height:normal;
+    letter-spacing: 0px;
+}
+
+h5{
+    font-weight: 700;
+    font-size: 18px;
+    line-height: normal;
+    letter-spacing: 0px;
+}
+
+p{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 140%;
+    letter-spacing: 0px;
 }
 
 span {
     font-weight: 400;
-    font-size: 18px;
-    line-height: 27px;
+    font-size: 12px;
+    line-height: normal;
+    letter-spacing: 0px;
 }
 
 .ui-link {
@@ -54,9 +83,87 @@ span {
 }
 
 .ui-button{
-    background-color: var(--accent-c);
+    background-color: var(--primary-c);
     padding: 12px 20px ;
-    border-radius: 6px;
-    height: 51px;
     max-width: max-content;
+    color: var(--secondary-c);
+    transition: 0.2s;
+}
+
+.ui-button:hover{
+    background-color: var(--accent-c);
+    transition: 0.2s;
+}
+
+.ui-button:active{
+    background-color: #CBC6B2;
+    transition: 0.2s;
+}
+
+.ui-button[disabled] {
+    background-color: #212529;
+    transition: 0.2s;
+}
+
+input{
+    background: transparent;
+    outline:none;
+    border-bottom: 2px solid var(--primary-c);
+    padding-bottom: 12px ;
+    max-width: 562px;
+    width: 100%;
+}
+
+input:focus{
+    background: transparent;
+    outline:none;
+    border-bottom: 2px solid var(--accent-c);
+}
+
+/* input[error]{
+    background: transparent;
+    border: none;
+    border-bottom: var(--form-error-c);
+}
+
+input[success]{
+    background: transparent;
+    border: none;
+    border-bottom: var(--form-primary-c);
+} */
+
+.ui-button--secondary{
+    border-bottom: 2px solid var(--primary-c);
+    color: var(--primary-c);
+    transition: 0.2s;;
+}
+
+
+.ui-button--secondary:hover{
+    border-bottom: 2px solid var(--accent-c);
+    color: var(--accent-c);
+    transition: 0.2s;
+}
+
+.ui-button--secondary:active{
+    border-bottom: 2px solid #CBC6B2;
+    color: #CBC6B2;
+    transition: 0.2s;
+}
+
+
+
+@media(max-width: 375px) {
+    h1 {
+        font-size: 32px;
+    }
+
+    h2 {
+        font-size: 28px;
+    }
+    
+    h3 {
+        font-size: 24px;
+    }
+    
 }
